--- a/irc.toml.dist
+++ b/irc.toml.dist
@@ -2,3 +2,6 @@ nickname = "testrusty"
 server = "irc.gewis.nl"
 channels = ["#rusty"]
 user_info = "Don't annoy me."
+
+[options]
+nickserv_password = ""
